check-resource-configuration/check-resource-configuration.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-resource-configuration
  annotations:
    policies.kyverno.io/title: Check resource configuration
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.4 
    kyverno.io/kubernetes-version: "1.27"     
    policies.kyverno.io/subject: Deployment, Pod, VerticalPodAutoscaler
    policies.kyverno.io/description: >-
      Policy to check if the resource allocation is within the lower and upperbound of the VPA.
spec:
  validationFailureAction: Audit
  background: false
  rules:
    - name: check-vpa-configuration
      match:
        any:
        - resources:
            kinds:
              - Deployment
              - Pod
      preconditions:
        all:
        - key: "{{ time_diff('{{ creationTimestamp }}','{{ time_now_utc() }}') }}"
          operator: LessThanOrEquals
          value: "168h"
      context:
        - name: lowerBoundCpu
          apiCall:
            urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
            jmesPath: "items[?spec.targetRef.name == '{{ request.object.metadata.name }}' && spec.targetRef.kind=='{{ request.object.kind }}'].status.recommendation.containerRecommendations[].lowerBound.cpu"
        - name: lowerBoundMemory
          apiCall:
            urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
            jmesPath: "items[?spec.targetRef.name == '{{ request.object.metadata.name }}' && spec.targetRef.kind=='{{ request.object.kind }}'].status.recommendation.containerRecommendations[].lowerBound.memory"
        - name: upperBoundCpu
          apiCall:
            urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
            jmesPath: "items[?spec.targetRef.name == '{{ request.object.metadata.name }}' && spec.targetRef.kind=='{{ request.object.kind }}'].status.recommendation.containerRecommendations[].upperBound.cpu"
        - name: upperBoundMemory
          apiCall:
            urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
            jmesPath: "items[?spec.targetRef.name == '{{ request.object.metadata.name }}' && spec.targetRef.kind=='{{ request.object.kind }}'].status.recommendation.containerRecommendations[].upperBound.memory"
        - name: creationTimestamp
          apiCall:
            urlPath: "/apis/autoscaling.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/verticalpodautoscalers"
            jmesPath: "items[?spec.targetRef.name == '{{ request.object.metadata.name }}' && spec.targetRef.kind=='{{ request.object.kind }}'].metadata.creationTimestamp"
      validate:
        message: >-
          Workload '{{request.object.kind}}/{{request.object.metadata.name}}' 
          requires a matching VerticalPodAutoscaler (VPA) in the 
          '{{request.object.metadata.namespace}}' namespace.
        foreach:
        - list: request.object.spec.containers[]
          deny:
            conditions:
              all:
              - key: "{{ element.resources.requests.cpu }}" 
                operator: LessThan
                value: "{{ lowerBoundCpu }}"
              - key: "{{ element.resources.requests.cpu }}" 
                operator: GreaterThan
                value: "{{ upperBoundCpu }}"
              - key: "{{ element.resources.requests.memory }}"
                operator: LessThan
                value: "{{ lowerBoundMemory }}"
              - key: "{{ element.resources.requests.memory }}"
                operator: GreaterThan
                value: "{{ upperBoundMemory }}"
